--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.8.0",
     "@aws-sdk/client-dynamodb": "^3.846.0",
     "@aws-sdk/lib-dynamodb": "^3.846.0",
     "dotenv": "^17.2.0",
